# mcu

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST  README.md  README_TEMPLATE.md  REPO_README.md  VIBE_CODING.md  VIBE_NOTE.md  __vibec-ANALYSIS__conflict_detection_framework.md  __vibec-ANALYSIS__rule_classification.md  __vibec-ANALYSIS__rule_precedence.md  __vibec-PLAN__P1_base_spec_update.md  __vibec-PLAN__P2_backlog_spec.md  __vibec-PLAN__P3_backlog_item_spec.md  __vibec-PLAN__P4_templates.md  __vibec-PLAN__P5_validator_support.md  __vibec-PLAN__P6_docs_integration.md  __vibec-PLAN__aiailint_comprehensive_test_suite.md  __vibec-PLAN__mcu_extraction.md  __vibec-PLAN__plan-of-plan__vibe_backlog.md  __vibec-PLAN__vibe_backlog_extension.md  __vibec-PLAN__vibe_coding_validation_strategy.md  __vibec-PLAN__vibe_note_mcu_extension.md  __vibec-STATUS__aiailint_phase1_completion.md  __vibec-STATUS__aiailint_pytest_migration.md  __vibec-STATUS__mcu_extraction_progress.md  __vibec-STATUS__vibe_coding_validation_phase1_completion.md  __vibew-ANALYSIS__entity_specification_template.md  __vibew-ANALYSIS__mcu_hierarchy_validation.md  __vibew-ANALYSIS__vibe_work_scope_validation.md  __vibew-ANALYSIS__vibework_inheritance_design.md  __vibew-ANALYSIS__work_activity_entity_categories.md  __vibew-ANALYSIS__work_activity_entity_inheritance.md  __vibew-BACKLOG__JTBD.md  __vibew-PLAN__vibe_coding_to_vibework_migration.md  __vibew-PLAN__work_activity_entity_formalization.md  __vibew-SPEC__align_entity.md  __vibew-SPEC__analyze_entity.md  (+15 more)
BACKLOGS/: BACKLOG_MAIN.md  README.md
BACKLOGS/ITEMS/: BLIT_007F0101_2025-08-09T16-18-55Z.json  BLIT_007F0101_2025-08-09T16-18-55Z.md  BLIT_007F0101_2025-08-09T16-20-31Z.json  BLIT_007F0101_2025-08-09T16-20-31Z.md  BLIT_007F0101_2025-08-09T16-24-48Z.json  BLIT_007F0101_2025-08-09T16-24-48Z.md  BLIT_007F0101_2025-08-09T16-27-23Z.json  BLIT_007F0101_2025-08-09T16-27-23Z.md  BLIT_007F0101_2025-08-09T18-37-49Z.json  BLIT_007F0101_2025-08-09T18-37-49Z.md  BLIT_007F0101_2025-08-09T18-42-21Z.json  BLIT_007F0101_2025-08-09T18-42-21Z.md  BLIT_007F0101_2025-08-09T18-44-12Z.json  BLIT_007F0101_2025-08-09T18-44-12Z.md  BLIT_007F0101_2025-08-09T18-46-07Z.json  BLIT_007F0101_2025-08-09T18-46-07Z.md  BLIT_007F0101_2025-08-09T18-49-23Z.json  BLIT_007F0101_2025-08-09T18-49-23Z.md  BLIT_007F0101_2025-08-09T19-17-57Z.json  BLIT_007F0101_2025-08-09T19-17-57Z.md  BLIT_007F0101_2025-08-09T19-35-49Z.json  BLIT_007F0101_2025-08-09T19-35-49Z.md  BLIT_007F0101_2025-08-09T19-38-56Z.json  BLIT_007F0101_2025-08-09T19-38-56Z.md  BLIT_007F0101_2025-08-09T19-51-22Z.json  BLIT_007F0101_2025-08-09T19-51-22Z.md  BLIT_007F0101_2025-08-09T20-10-23Z.json  BLIT_007F0101_2025-08-09T20-10-23Z.md  BLIT_007F0101_2025-08-09T20-52-48Z.json  BLIT_007F0101_2025-08-09T20-52-48Z.md  BLIT_007F0101_2025-08-10T00-12-24Z.json  BLIT_007F0101_2025-08-10T00-12-24Z.md  BLIT_007F0101_2025-08-10T01-19-21Z.json  BLIT_007F0101_2025-08-10T01-19-21Z.md  BLIT_007F0101_2025-08-10T01-44-20Z.json  BLIT_007F0101_2025-08-10T01-44-20Z.md  BLIT_007f0101_2025-08-09T16-02-41Z.json  BLIT_007f0101_2025-08-09T16-02-41Z.md
VIBE-ARCHIVE/: README.md  __vibec-PLAN__P1_base_spec_update.md  __vibec-PLAN__P2_backlog_spec.md  __vibec-PLAN__P3_backlog_item_spec.md  __vibec-PLAN__P4_templates.md  __vibec-PLAN__P5_validator_support.md  __vibec-PLAN__P6_docs_integration.md  __vibec-PLAN__plan-of-plan__vibe_backlog.md
aiai/: README.md
aiai/core/: README.md  aiai_schema_documentation.md
aiai/design/: README.md
aiai/mcu/: README.md
aiailint/: .coveragerc  MANIFEST  README.md  conftest.py  pytest.ini
aiailint/docs/: AIAI_DEVELOPER_GUIDE.md
aiailint/src/: README.md
aiailint/tests/: __init__.py  test_aiailint.py  test_integration.py  test_validator.py  utils.py
backlog/: MCU_BACKLOG_SPECIFICATION.md
backlog-item/: MCU_BACKLOG_ITEM_SPECIFICATION.md  blit_convert.py  blit_schema.json  test_blit_convert.py
base/: README.md  VIBE_CODING.md
base/scripts/: README.md  VIBE_CODING.md  (+4 more)
common/: .gitkeep  README.md
devops/: MANIFEST
devops/build-env/aiailint-dev/config/: pyproject.toml  tox.ini
docs/: MCU_SPECIFICATION.md  OPERATOR_GUIDE.md  README.md  S3_STORAGE_PARTITIONING.md  S4_SYSTEM_SUBVOLUME_SETUP.md  S5_ML_SUBVOLUME_SETUP.md  S7_GRUB_SETUP_AND_REBOOT.md  UBUNTU-BTRFS_TROUBLESHOOTING.md
examples/: README.md  example-reference.md
framework/: MANIFEST
instruction/: INSTRUCTION_SPECIFICATION.md  MCU_INSTRUCTION_SPECIFICATION.md  README.md
mcu/: README.md
migration-source/: README.md
note/: README.md
reference/: MCU_BACKLOG_ITEM_SPECIFICATION.md  MCU_BACKLOG_SPECIFICATION.md  MCU_NOTE_SPECIFICATION.md  MCU_REFERENCE_SPECIFICATION.md  README.md  REFERENCE_SPECIFICATION.md
s2m/: MANIFEST
scripts/: generate_mcu.py  validate_mcu.py
templates/: MCU_BACKLOG_ITEM_TEMPLATE.md  MCU_BACKLOG_TEMPLATE.md  MCU_NOTE_TEMPLATE.md  PLAN_STEP_TEMPLATE.md  PLAN_TEMPLATE.md  POP_TEMPLATE.md  README.md
tests/: MCU_REFERENCE_SPECIFICATION_FAQ.md  README.md  VIBE_CODING_FAQ.md  review_2_of_VIBE_CODING.md  review_of_REFERENCE_SPECIFICATON.md
tmp-out/: BLIT_007F0101_2025-08-09T18-49-23Z.md
vi/: README.md
(+244 files in other folders)
